// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getZodObjectFromApi > typeParameters가 Generic Intersection인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Intersection인 API > typeParameters 반영 확인(2) 1`] = `
[
  undefined,
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Intersection인 API > 정의한 파라미터 반영 확인 1`] = `
ZodIntersection {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "left": ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "a",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "a",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "right": ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "b",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "b",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "intersection",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "intersection",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Intersection인 API > 타입 파라미터 타입 체크 1`] = `"intersection"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number의 배열, String의 배열인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number의 배열, String의 배열인 API > typeParameters 반영 확인 1`] = `
[
  "T",
  "U",
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number의 배열, String의 배열인 API > 정의한 파라미터1 반영 확인 1`] = `
ZodArray {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "element": ZodString {
      "and": [Function],
      "array": [Function],
      "base64": [Function],
      "base64url": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "cidrv4": [Function],
      "cidrv6": [Function],
      "clone": [Function],
      "cuid": [Function],
      "cuid2": [Function],
      "date": [Function],
      "datetime": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "string",
      },
      "default": [Function],
      "describe": [Function],
      "duration": [Function],
      "e164": [Function],
      "email": [Function],
      "emoji": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "endsWith": [Function],
      "format": null,
      "guid": [Function],
      "includes": [Function],
      "ipv4": [Function],
      "ipv6": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "jwt": [Function],
      "ksuid": [Function],
      "length": [Function],
      "lowercase": [Function],
      "max": [Function],
      "maxLength": null,
      "meta": [Function],
      "min": [Function],
      "minLength": null,
      "nanoid": [Function],
      "nonempty": [Function],
      "nonoptional": [Function],
      "normalize": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "regex": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "startsWith": [Function],
      "superRefine": [Function],
      "time": [Function],
      "toLowerCase": [Function],
      "toUpperCase": [Function],
      "transform": [Function],
      "trim": [Function],
      "type": "string",
      "ulid": [Function],
      "uppercase": [Function],
      "url": [Function],
      "uuid": [Function],
      "uuidv4": [Function],
      "uuidv6": [Function],
      "uuidv7": [Function],
      "xid": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "array",
  },
  "default": [Function],
  "describe": [Function],
  "element": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "length": [Function],
  "max": [Function],
  "meta": [Function],
  "min": [Function],
  "nonempty": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "array",
  "unwrap": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number의 배열, String의 배열인 API > 정의한 파라미터2 반영 확인 1`] = `
ZodOptional {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "innerType": ZodArray {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "element": ZodNumber {
          "and": [Function],
          "array": [Function],
          "brand": [Function],
          "catch": [Function],
          "check": [Function],
          "clone": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "checks": [],
            "type": "number",
          },
          "default": [Function],
          "describe": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "finite": [Function],
          "format": null,
          "gt": [Function],
          "gte": [Function],
          "int": [Function],
          "isFinite": true,
          "isInt": false,
          "isNullable": [Function],
          "isOptional": [Function],
          "lt": [Function],
          "lte": [Function],
          "max": [Function],
          "maxValue": Infinity,
          "meta": [Function],
          "min": [Function],
          "minValue": -Infinity,
          "multipleOf": [Function],
          "negative": [Function],
          "nonnegative": [Function],
          "nonoptional": [Function],
          "nonpositive": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "overwrite": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "positive": [Function],
          "prefault": [Function],
          "readonly": [Function],
          "refine": [Function],
          "register": [Function],
          "safe": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "step": [Function],
          "superRefine": [Function],
          "transform": [Function],
          "type": "number",
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "type": "array",
      },
      "default": [Function],
      "describe": [Function],
      "element": ZodNumber {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [],
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "finite": [Function],
        "format": null,
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": false,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": Infinity,
        "meta": [Function],
        "min": [Function],
        "minValue": -Infinity,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "number",
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "length": [Function],
      "max": [Function],
      "meta": [Function],
      "min": [Function],
      "nonempty": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "array",
      "unwrap": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "optional",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "optional",
  "unwrap": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number의 배열, String의 배열인 API > 타입파라미터 타입 체크 1`] = `"array"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number인 API > parameters 반영 확인 2`] = `
ZodNumber {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "checks": [],
    "type": "number",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "finite": [Function],
  "format": null,
  "gt": [Function],
  "gte": [Function],
  "int": [Function],
  "isFinite": true,
  "isInt": false,
  "isNullable": [Function],
  "isOptional": [Function],
  "lt": [Function],
  "lte": [Function],
  "max": [Function],
  "maxValue": Infinity,
  "meta": [Function],
  "min": [Function],
  "minValue": -Infinity,
  "multipleOf": [Function],
  "negative": [Function],
  "nonnegative": [Function],
  "nonoptional": [Function],
  "nonpositive": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "positive": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safe": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "step": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "number",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number인 API > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Number인 API > 타입파라미터 타입 체크 1`] = `"number"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Object인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Object인 API > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Object인 API > 정의한 파라미터 반영 확인 1`] = `
ZodObject {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "catchall": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "shape": {
      "id": ZodNumber {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [],
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "finite": [Function],
        "format": null,
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": false,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": Infinity,
        "meta": [Function],
        "min": [Function],
        "minValue": -Infinity,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "number",
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
    "type": "object",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "extend": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "keyof": [Function],
  "loose": [Function],
  "merge": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "omit": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "partial": [Function],
  "passthrough": [Function],
  "pick": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "required": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeExtend": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "strict": [Function],
  "strip": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "object",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Object인 API > 타입파라미터 타입 체크 1`] = `"object"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Tuple인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Tuple인 API > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Tuple인 API > 정의한 파라미터 반영 확인 1`] = `
ZodTuple {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "items": [
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "string",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            1,
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          1,
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "rest": null,
    "type": "tuple",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "rest": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "tuple",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Tuple인 API > 정의한 파라미터 타입 체크 1`] = `"tuple"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Union인 API > parameters 반영 확인 1`] = `"error"`;

exports[`getZodObjectFromApi > typeParameters가 Generic Union인 API > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Union인 API > 정의한 파라미터 반영 확인 1`] = `
ZodUnion {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "options": [
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "a",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "a",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "b",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "b",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "type": "union",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "options": [
    ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "a",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "a",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "b",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "b",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  ],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "union",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodObjectFromApi > typeParameters가 Generic Union인 API > 타입파라미터 타입 체크 1`] = `"union"`;

exports[`getZodObjectFromApi > 기본 API > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`getZodObjectFromApi > 기본 API > typeParameters 반영 확인 1`] = `[]`;

exports[`getZodObjectFromApi > 기본 API > 정의한 파라미터 타입 1`] = `"string"`;

exports[`getZodObjectFromApi > 기본 API > 타입파라미터 타입 체크 1`] = `"optional"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Array인 경우 > 타입 확인 1`] = `"array"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Intersection인 경우 > 타입 확인 1`] = `"intersection"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Number인 경우 > 타입 확인 1`] = `"number"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Object인 경우 > 타입 확인 1`] = `"object"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic String인 경우 > 타입 확인 1`] = `"string"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Tuple인 경우 > 요소 확인 1`] = `
ZodTuple {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "items": [
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "string",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            1,
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          1,
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "rest": null,
    "type": "tuple",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "rest": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "tuple",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Tuple인 경우 > 타입 확인 1`] = `"tuple"`;

exports[`getZodTypeFromApiParamType > 타입 파라미터가 Generic Union인 경우 > 타입 확인 1`] = `"union"`;
